{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 20,
  "lineage": "e22e41f3-fcf0-f060-15c6-e5225c746bd6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b016d1e12e0375a8",
            "arn": "arn:aws:ec2:eu-west-1:742452887235:instance/i-005e1a3c0f9028c37",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005e1a3c0f9028c37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0229ce0dafbf345f0",
            "private_dns": "ip-10-0-1-123.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.123",
            "public_dns": "ec2-3-253-69-178.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.253.69.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "ManagedBy": "Terraform",
                  "Project": "terraform-rds"
                },
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Project": "terraform-rds"
                },
                "throughput": 0,
                "volume_id": "vol-00cb3f7d0128f3e45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d38bf56817bf0745",
            "tags": {
              "Name": "terraform-rds-ec2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-ec2",
              "Project": "terraform-rds"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b35902d7c1ef19c7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742452887235:internet-gateway/igw-052c4947e51829acc",
            "id": "igw-052c4947e51829acc",
            "owner_id": "742452887235",
            "tags": {
              "Name": "terraform-rds-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-igw",
              "Project": "terraform-rds"
            },
            "vpc_id": "vpc-0b13503865fc8213b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742452887235:route-table/rtb-0170fafb0e1f60764",
            "id": "rtb-0170fafb0e1f60764",
            "owner_id": "742452887235",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-rds-private-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-private-rt",
              "Project": "terraform-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13503865fc8213b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742452887235:route-table/rtb-0b15aceb02c69b7a8",
            "id": "rtb-0b15aceb02c69b7a8",
            "owner_id": "742452887235",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052c4947e51829acc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rds-public-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-public-rt",
              "Project": "terraform-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13503865fc8213b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7ef72e98c939e1b",
            "route_table_id": "rtb-0170fafb0e1f60764",
            "subnet_id": "subnet-0399dca14fceabb72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0400bba3d91eadd05",
            "route_table_id": "rtb-0170fafb0e1f60764",
            "subnet_id": "subnet-07f2f82077aaae00c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b398533c6b4ff2f",
            "route_table_id": "rtb-0b15aceb02c69b7a8",
            "subnet_id": "subnet-0d38bf56817bf0745"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742452887235:security-group/sg-0433e525a0514ceea",
            "description": "Allow PostgreSQL from web SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0433e525a0514ceea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from web SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b35902d7c1ef19c7"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-rds-db-sg",
            "name_prefix": "",
            "owner_id": "742452887235",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-rds-db-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-db-sg",
              "Project": "terraform-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13503865fc8213b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742452887235:security-group/sg-0b35902d7c1ef19c7",
            "description": "Allow SSH and HTTP from anywhere (IPv4)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b35902d7c1ef19c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-rds-web-sg",
            "name_prefix": "",
            "owner_id": "742452887235",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-rds-web-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-web-sg",
              "Project": "terraform-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13503865fc8213b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ingress_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from web SG",
            "from_port": 5432,
            "id": "sgrule-263122421",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0433e525a0514ceea",
            "security_group_rule_id": "sgr-0c0065893d2f26b9a",
            "self": false,
            "source_security_group_id": "sg-0b35902d7c1ef19c7",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.db",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742452887235:subnet/subnet-0399dca14fceabb72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0399dca14fceabb72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742452887235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-rds-private-0"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-private-0",
              "Project": "terraform-rds"
            },
            "vpc_id": "vpc-0b13503865fc8213b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742452887235:subnet/subnet-07f2f82077aaae00c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f2f82077aaae00c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742452887235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-rds-private-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-private-1",
              "Project": "terraform-rds"
            },
            "vpc_id": "vpc-0b13503865fc8213b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742452887235:subnet/subnet-0d38bf56817bf0745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d38bf56817bf0745",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "742452887235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-rds-public-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-public-1a",
              "Project": "terraform-rds"
            },
            "vpc_id": "vpc-0b13503865fc8213b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742452887235:vpc/vpc-0b13503865fc8213b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0958902664fcfa30f",
            "default_route_table_id": "rtb-02a132daeeeb9e790",
            "default_security_group_id": "sg-0a15dd30fa4200682",
            "dhcp_options_id": "dopt-08fef0f24565ac65c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b13503865fc8213b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a132daeeeb9e790",
            "owner_id": "742452887235",
            "tags": {
              "Name": "terraform-rds-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-rds-vpc",
              "Project": "terraform-rds"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}